# openarm-data-pipeline

openarm-data-pipeline_1/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
openarm-data-pipeline_1/data/episodes/: ep_20260613T041747Z.mcap
openarm-data-pipeline_1/scripts/: demo_record.py  setup_can.sh
openarm-data-pipeline_1/src/openarm_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openarm-data-pipeline_1/src/openarm_pipeline/: __init__.py  config.py  recorder.py
openarm-data-pipeline_1/src/openarm_pipeline/api/: server.py
openarm-data-pipeline_1/src/openarm_pipeline/api/static/: dashboard.html
openarm-data-pipeline_1/src/openarm_pipeline/cameras/: camera.py  sync.py
openarm-data-pipeline_1/src/openarm_pipeline/can/: bus.py  cli.py  damiao.py
openarm-data-pipeline_1/src/openarm_pipeline/storage/: mcap_store.py  openarm_export.py
openarm-data-pipeline_1/tests/: test_pipeline.py
